--- a/list.ipynb
+++ b/list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -20,6 +20,35 @@
    "source": [
     "for i in range(0,10,2):\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def primee():\n",
+    "    a=[2]\n",
+    "    for i in range(3, 100):\n",
+    "        isprime=True\n",
+    "        for j in range(2,int(i*0.5)+1):\n",
+    "            if i%j==0:\n",
+    "                isprime=False\n",
+    "                break\n",
+    "        if isprime:\n",
+    "            a.append(i)\n",
+    "    return a   \n",
+    "aa=primee()\n",
+    "print(aa)   "
    ]
   }
  ],
