added  a palindrom function

--- a/list.ipynb
+++ b/list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,30 @@
     "    return a   \n",
     "aa=primee()\n",
     "print(aa)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12231 is not a palindrom number \n"
+     ]
+    }
+   ],
+   "source": [
+    "def pandro(num):\n",
+    "    if num==num[::-1]:\n",
+    "        print(f\"{num} is a palindrom number \")\n",
+    "    else:\n",
+    "        print(f\"{num} is not a palindrom number \")\n",
+    "    \n",
+    "    \n",
+    "pan1=pandro('12231')\n"
    ]
   }
  ],
