--- a/list.ipynb
+++ b/list.ipynb
@@ -52,6 +52,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 👇 this palindrom function works for strings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
