gave a list of numbers

--- a/list.ipynb
+++ b/list.ipynb
@@ -60,26 +60,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pandro(num):\n",
+    "    num=str(num)\n",
+    "    if num==num[::-1]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "    \n",
+    "pan1=pandro('12231')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12231 is not a palindrom number \n"
+      "121 is palindrom \n",
+      "12321 is palindrom \n",
+      "232 is palindrom \n",
+      "5252 is not a palindrom \n",
+      "6 is palindrom \n",
+      "5 is palindrom \n"
      ]
     }
    ],
    "source": [
-    "def pandro(num):\n",
-    "    if num==num[::-1]:\n",
-    "        print(f\"{num} is a palindrom number \")\n",
+    "lists=['121','12321','232','5252',6,5]\n",
+    "for item in lists:\n",
+    "    if pandro(item):\n",
+    "        print(f\"{item} is palindrom \")\n",
     "    else:\n",
-    "        print(f\"{num} is not a palindrom number \")\n",
-    "    \n",
-    "    \n",
-    "pan1=pandro('12231')\n"
+    "        print(f\"{item} is not a palindrom \")"
    ]
   }
  ],
