added a new line

--- a/list.ipynb
+++ b/list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,59 @@
     "    return a   \n",
     "aa=primee()\n",
     "print(aa)   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 👇 this palindrom function works for strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pandro(num):\n",
+    "    num=str(num)\n",
+    "    if num==num[::-1]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "    \n",
+    "pan1=pandro('12231')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we\\'ll know whether these numbers are palin or not\n",
+      "121 is palindrom \n",
+      "12321 is palindrom \n",
+      "232 is palindrom \n",
+      "5252 is not a palindrom \n",
+      "6 is palindrom \n",
+      "5 is palindrom \n"
+     ]
+    }
+   ],
+   "source": [
+    "lists=['121','12321','232','5252',6,5]\n",
+    "print(r'we\\'ll know whether these numbers are palin or not' )\n",
+    "for item in lists:\n",
+    "    if pandro(item):\n",
+    "        print(f\"{item} is palindrom \")\n",
+    "    else:\n",
+    "        print(f\"{item} is not a palindrom \")"
    ]
   }
  ],
