add a line in main branch

--- a/list.ipynb
+++ b/list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "let's know some palindrom numbers\n",
       "121 is palindrom \n",
       "12321 is palindrom \n",
       "232 is palindrom \n",
@@ -95,6 +96,7 @@
    ],
    "source": [
     "lists=['121','12321','232','5252',6,5]\n",
+    "print(r\"let's know some palindrom numbers\")\n",
     "for item in lists:\n",
     "    if pandro(item):\n",
     "        print(f\"{item} is palindrom \")\n",
