change the lines to learn conflicts

--- a/list.ipynb
+++ b/list.ipynb
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we\\'ll know whether these numbers are palin or not\n",
+      "checking a list of number\n",
       "121 is palindrom \n",
       "12321 is palindrom \n",
       "232 is palindrom \n",
@@ -96,7 +96,7 @@
    ],
    "source": [
     "lists=['121','12321','232','5252',6,5]\n",
-    "print(r'we\\'ll know whether these numbers are palin or not' )\n",
+    "print(r'checking a list of number' )\n",
     "for item in lists:\n",
     "    if pandro(item):\n",
     "        print(f\"{item} is palindrom \")\n",
